# arip

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_TREE.md  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  dependencies.py
backend/app/application/: __init__.py
backend/app/core/: __init__.py  config.py  constants.py  logger.py
backend/app/domain/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py
docs/: TASK-005-ARCHITECTURE.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/animations/: variants.ts
frontend/src/api/: axios.ts  client.ts  interceptors.ts
frontend/src/hooks/: useAnalysis.ts  useAuth.ts  useJob.ts  useKeyboardShortcuts.ts  useReport.ts  useResume.ts
tests/: __init__.py  test_achievement_builder.py  test_agent_orchestrator.py  test_analysis_presentation.py  test_api_endpoints.py  test_ats_agent.py  test_boundary_detection.py  test_candidate_builder.py  test_certification_builder.py  test_cir_builder.py  test_document_intelligence.py  test_document_pipeline.py  test_domain_entities.py  test_education_builder.py  test_experience_builder.py  test_heading_detection.py  test_job_builder.py  test_project_builder.py  test_recruiter_agent.py  test_resume_coach.py  test_resume_integration.py  test_section_detection.py  test_semantic_engine.py  test_skill_builder.py  test_storage_service.py
(+203 files in other folders)
